WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60083
WebKit2 should treat API calls that start/stop loads as user gestures for responsiveness timer
https://bugs.webkit.org/show_bug.cgi?id=60083
Summary
WebKit2 should treat API calls that start/stop loads as user gestures for res...
Sam Weinig
Reported
2011-05-03 16:38:30 PDT
WebKit2 should treat API calls that start/stop loads as user gestures for responsiveness timer
Attachments
Patch
(9.28 KB, patch)
2011-05-03 16:41 PDT
,
Sam Weinig
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2011-05-03 16:41:13 PDT
Created
attachment 92164
[details]
Patch
Sam Weinig
Comment 2
2011-05-03 16:46:10 PDT
Committed
r85689
: <
http://trac.webkit.org/changeset/85689
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug